styles/Home.module.css
.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-weight: bold;
}

.calculator {
  width: 40rem; 
  min-height: 100%;
  background-color: #181D31;
}

@media (max-width: 700px){
  .calculator {
    width: 25.75rem;
  }   
}

.calculatorScreen{
  max-width: 80%;
  min-height: 10.6rem;
  margin: 2.5% auto;
}

@media (max-width: 700px){
  .calculatorScreen{
    min-height: 12.3rem; 
    font-size: 4rem;
    left: 3.5%;
  }
}

.calculatorScreen .miniScreen span{
  position: relative;
  top: 0.75rem;
  z-index: 1;
  font-size: 1.5rem;
}

@media (max-width: 700px){
  .miniScreen span{
    top: 0rem!important;
    font-size: 1.75rem!important;
  }
}

.calculatorScreen .mainScreen span{
  position: relative;
  top: 1.5rem;
  z-index: 1;
  font-size: 5.25rem;
}

@media (max-width: 700px){
  .mainScreen span{
    top: 0rem!important;
  }
}

.calculatorKeypad{
  min-width: 75%;
  min-height: 100%;
  display: flex!important;
  flex-wrap: wrap;
  padding: 0 0.1%;
}

.calcBtn{
  flex: 1 0 24%; 
  background-color: #FFFAE7;
  color: #181D31;
  min-height: 4.3rem;
  font-size: 3.25rem;
  border: #181D31 1px solid;
}

@media (max-width: 700px){
  .calcBtn{
    font-size: 3rem;
    min-height: 5.6rem;
  }
}

.calculatorKeypad button:nth-child(-n+3){
  background-color: #0779E4!important;
  color: #FFFAE7;
}

.calculatorKeypad button:nth-child(-n+3):active{
  border: #FFFAE7 4px solid;
}

.calculatorKeypad button:nth-child(4n){
  background-color: #9951FF!important;
  color: #FFFAE7;
}

.calculatorKeypad button:nth-child(4n):active{
  border: #FFFAE7 4px solid;
}

.calculatorKeypad button:nth-child(20){
  background-color: #C21010!important;
  color: #FFFAE7;
}

.calculatorKeypad button:nth-child(20):active{
  border: #FFFAE7 4px solid;
}

.calcBtn:active{
  border: #181D31 4px solid;
}

